--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,7 +15,7 @@
 	<link href="/css/app.881d4bfa.css" rel="stylesheet">
 </head>
 
-<body>새로 추가한 내용이야이야보경나는 JBC<noscript><strong>We're sorry but front-end-vue doesn't work properly without JavaScript enabled.
+<body>새로 추가한 내용이야이야보경나는 JBC 숨숨 이안따꺼<noscript><strong>We're sorry but front-end-vue doesn't work properly without JavaScript enabled.
 			Please enable it to continue.</strong></noscript>
 	<div id="app"></div>
 </body>
